--- a/belgeler/terimler.html
+++ b/belgeler/terimler.html
@@ -28,10 +28,14 @@
   <div data-deveb="kaplama ortada" data-gnl="24 24p" data-ort="24 24p">
     <div data-gnl="23">
       <h1>Terimler</h1>
-      <p><span data-metin="dikkat">data-gnl</span>: Telefon ekranları ve daha büyük ekranlar için genişlik tanımlama</p>
-      <p><span data-metin="dikkat">data-ufk</span>: Tablet ekranları ve daha büyük ekranlar için genişlik tanımlama</p>
-      <p><span data-metin="dikkat">data-ort</span>: Dizüstü ekranları ve daha büyük ekranlar için genişlik tanımlama</p>
-      <p><span data-metin="dikkat">data-byk</span>: Masaüstü ekranları ve daha büyük ekranlar için genişlik tanımlama</p>
+      <p><span data-metin="dikkat">data-gnl</span>: Telefon ekranları ve daha büyük ekranlar için kap örgüsü genişliği tanımlar.</p>
+      <p><span data-metin="dikkat">data-ufk</span>: Tablet ekranları ve daha büyük ekranlar için kap örgüsü genişliği tanımlar</p>
+      <p><span data-metin="dikkat">data-ort</span>: Dizüstü ekranları ve daha büyük ekranlar için kap örgüsü genişliği tanımlar</p>
+      <p><span data-metin="dikkat">data-byk</span>: Masaüstü ekranları ve daha büyük ekranlar için kap örgüsü genişliği tanımlar</p>
+      <p><span data-metin="dikkat">data-deveb="<span data-metin="olumlu">kaplama</span>"</span>: Geniş ekranlarda sabit kap örgüsü genişliği tanımlar</p>
+      <p><span data-metin="dikkat">data-deveb="<span data-metin="olumlu">kaplama</span>"</span>: Geniş ekranlarda sabit kap örgüsü genişliği tanımlar</p>
+
+
     </div>
   </div>
   <div data-gnl="1 1p" w3-include-html="/temel/foot.html"></div>
