--- a/belgeler/terimler.html
+++ b/belgeler/terimler.html
@@ -32,9 +32,11 @@
       <p><span data-metin="dikkat">data-ufk</span>: Tablet ekranları ve daha büyük ekranlar için kap örgüsü genişliği tanımlar</p>
       <p><span data-metin="dikkat">data-ort</span>: Dizüstü ekranları ve daha büyük ekranlar için kap örgüsü genişliği tanımlar</p>
       <p><span data-metin="dikkat">data-byk</span>: Masaüstü ekranları ve daha büyük ekranlar için kap örgüsü genişliği tanımlar</p>
-      <p><span data-metin="dikkat">data-deveb="<span data-metin="olumlu">kaplama</span>"</span>: Geniş ekranlarda sabit kap örgüsü genişliği tanımlar</p>
-      <p><span data-metin="dikkat">data-deveb="<span data-metin="olumlu">kaplama</span>"</span>: Geniş ekranlarda sabit kap örgüsü genişliği tanımlar</p>
-
+      <p><span data-metin="dikkat">data-deveb="kaplama"</span>: Geniş ekranlarda sabit kap örgüsü genişliği tanımlar</p>
+      <p><span data-metin="dikkat">data-gnl="tam-kaplama"</span>: Tüm ekran genişliklerinde bulunduğu genişliğin tamamını katı bir şekilde kaplar.</p>
+      <p><span data-metin="dikkat">data-ufk="tam-kaplama"</span>: Tablet ekranları ve daha büyük ekran genişliklerinde bulunduğu genişliğin tamamını katı bir şekilde kaplar.</p>
+      <p><span data-metin="dikkat">data-ort="tam-kaplama"</span>: Dizüstü ekranları ve daha büyük ekran genişliklerinde bulunduğu genişliğin tamamını katı bir şekilde kaplar.</p>
+      <p><span data-metin="dikkat">data-byk="tam-kaplama"</span>: Masaüstü ekranları ve daha büyük ekran genişliklerinde bulunduğu genişliğin tamamını katı bir şekilde kaplar.</p>
 
     </div>
   </div>
