--- a/belgeler/tarayici-destegi.html
+++ b/belgeler/tarayici-destegi.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Deveb Önyüz İskeleti</title>
+  <title>Deveb - Tarayıcı Desteği</title>
 
   <!-- Kök -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;subset=latin-ext" rel="stylesheet">
@@ -26,78 +26,77 @@
 <body>
   <div data-deveb="1 1p" class="header" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
 
-<div data-deveb="kaplama ortada" data-deveb="24p">
-  <div data-deveb="23 24p">
-    <div data-deveb="24">
+<div data-deveb="kaplama ortada" data-gnl="23 24p">
+    <div data-gnl="24">
       <h1>Tarayıcı Desteği</h1>
-      <p class="beri-alt-2">Deveb önyüz iskeletini destekleyen tarayıcılar</p>
+      <p>Deveb önyüz iskeletini destekleyen tarayıcılar</p>
     </div>
 
-    <div data-deveb="24">
-      <div data-deveb="24">
+    <div data-gnl="24">
+      <div data-gnl="24">
         <h2>Masaüstü Desteği</h2>
-        Destekler güncel sürümlere göre belirtilmiştir.
+        <p>Destekler güncel sürümlere göre belirtilmiştir.</p>
       </div>
-      <div data-deveb="24" data-deveb="üstte">
-        <div data-deveb="6 6p" data-deveb="ufk-1 6p">
-          <div data-deveb="3" data-deveb="ufk-6">
+      <div data-gnl="24" data-deveb="üstte">
+        <div data-gnl="6 6p" data-ufk="1 6p">
+          <div data-gnl="3" data-ufk="6">
             <div class="kutu kutu-genel">
               <i class="fa fa-chrome" aria-hidden="true"></i> Chrome
             </div>
           </div>
-          <div data-deveb="3" data-deveb="ufk-6">
-            <div class="kutu kutu-genel metin-olumlu">
+          <div data-gnl="3" data-ufk="6">
+            <div class="kutu kutu-genel" data-metin="olumlu">
               <i class="fa fa-check" aria-hidden="true"></i> Sorunsuz
             </div>
           </div>
         </div>
-        <div data-deveb="6 6p" data-deveb="ufk-1 6p">
-          <div data-deveb="3" data-deveb="ufk-6">
+        <div data-gnl="6 6p" data-ufk="1 6p">
+          <div data-gnl="3" data-ufk="6">
           <div class="kutu kutu-genel">
             <i class="fa fa-firefox" aria-hidden="true"></i> Firefox
           </div>
           </div>
-          <div data-deveb="3" data-deveb="ufk-6">
-          <div class="kutu kutu-genel metin-olumlu">
+          <div data-gnl="3" data-ufk="6">
+          <div class="kutu kutu-genel" data-metin="olumlu">
             <i class="fa fa-check" aria-hidden="true"></i> Sorunsuz
           </div>
           </div>
         </div>
-        <div data-deveb="6 6p" data-deveb="ufk-1 6p">
-          <div data-deveb="3" data-deveb="ufk-6">
+        <div data-gnl="6 6p" data-ufk="1 6p">
+          <div data-gnl="3" data-ufk="6">
           <div class="kutu kutu-genel">
             <i class="fa fa-opera" aria-hidden="true"></i> Opera
           </div>
           </div>
-          <div data-deveb="3" data-deveb="ufk-6">
-          <div class="kutu kutu-genel metin-olumlu">
+          <div data-gnl="3" data-ufk="6">
+          <div class="kutu kutu-genel" data-metin="olumlu">
             <i class="fa fa-check" aria-hidden="true"></i> Sorunsuz
           </div>
           </div>
         </div>
-        <div data-deveb="6 6p" data-deveb="ufk-1 6p">
-          <div data-deveb="3" data-deveb="ufk-6">
+        <div data-gnl="6 6p" data-ufk="1 6p">
+          <div data-gnl="3" data-ufk="6">
           <div class="kutu kutu-genel">
             <i class="fa fa-safari" aria-hidden="true"></i> Safari
           </div>
           </div>
-          <div data-deveb="3" data-deveb="ufk-6">
-          <div class="kutu kutu-genel metin-olumlu">
+          <div data-gnl="3" data-ufk="6">
+          <div class="kutu kutu-genel" data-metin="olumlu">
             <i class="fa fa-check" aria-hidden="true"></i> Sorunsuz
           </div>
           </div>
         </div>
-        <div data-deveb="6 6p" data-deveb="ufk-1 6p">
-          <div data-deveb="3" data-deveb="ufk-6">
+        <div data-gnl="6 6p" data-ufk="1 6p">
+          <div data-gnl="3" data-ufk="6">
             <div class="kutu kutu-genel">
               <i class="fa fa-internet-explorer" aria-hidden="true"></i> IE 10+
             </div>
           </div>
-          <div data-deveb="3" data-deveb="ufk-6">
+          <div data-gnl="3" data-ufk="6">
             <div class="kutu kutu-genel metin-belirsiz">
               <i class="fa fa-times" aria-hidden="true"></i> Belirsiz
             </div>
-            <div class="kutu kutu-genel metin-olumsuz">
+            <div class="kutu kutu-genel" data-metin="olumsuz">
               <ul class="liste-temiz">
                 <li><i class="fa fa-question-circle-o" aria-hidden="true"></i> CSS özelliklerinde uyumsuzluk</li>
                 <li><i class="fa fa-question-circle-o" aria-hidden="true"></i> IE 10+ ek CSS ile güçlendirildi.</li>
@@ -105,17 +104,17 @@
             </div>
           </div>
         </div>
-        <div data-deveb="6 6p" data-deveb="ufk-1 6p">
-          <div data-deveb="3" data-deveb="ufk-6">
+        <div data-gnl="6 6p" data-ufk="1 6p">
+          <div data-gnl="3" data-ufk="6">
             <div class="kutu kutu-genel">
               <i class="fa fa-edge" aria-hidden="true"></i> Edge
             </div>
           </div>
-          <div data-deveb="3" data-deveb="ufk-6">
+          <div data-gnl="3" data-ufk="6">
             <div class="kutu kutu-genel metin-belirsiz">
               <i class="fa fa-times" aria-hidden="true"></i> Belirsiz
             </div>
-            <div class="kutu kutu-genel metin-olumsuz">
+            <div class="kutu kutu-genel" data-metin="olumsuz">
               <ul class="liste-temiz">
                 <li><i class="fa fa-question-circle-o" aria-hidden="true"></i> CSS özelliklerinde uyumsuzluk </li>
                 <li><i class="fa fa-question-circle-o" aria-hidden="true"></i> IE 10+ ek CSS ile güçlendirildi.</li>
@@ -126,7 +125,6 @@
       </div>
     </div>
 
-  </div>
 </div>
 
 <div data-deveb="1 1p" w3-include-html="https://data-deveb.github.io/temel/foot.html"></div>
