--- a/belgeler/tarayici-destegi.html
+++ b/belgeler/tarayici-destegi.html
@@ -1,134 +1,126 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Deveb - Tarayıcı Desteği</title>
-
-  <!-- Kök -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;subset=latin-ext" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&amp;subset=latin-ext" rel="stylesheet">
-  <link rel="stylesheet" href="https://data-deveb.github.io/assets/css/font-awesome.min.css">
-  <link href="https://data-deveb.github.io/assets/css/deveb.css" rel="stylesheet"><link href="https://data-deveb.github.io/assets/css/deveb.ilkel.css" rel="stylesheet">
-  <link href="https://data-deveb.github.io/assets/css/ie/deveb.ilkel.ie.css" rel="stylesheet">
-  <link href="https://data-deveb.github.io/assets/css/deveb.genel.css" rel="stylesheet">
-
-
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-</head>
-<body>
-  <div data-deveb="1 1p" class="header" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
-
-<div data-deveb="kaplama ortada" data-gnl="23 24p">
-    <div data-gnl="24">
-      <h1>Tarayıcı Desteği</h1>
-      <p>Deveb önyüz iskeletini destekleyen tarayıcılar</p>
-    </div>
-
-    <div data-gnl="24">
-      <div data-gnl="24">
-        <h2>Masaüstü Desteği</h2>
-        <p>Destekler güncel sürümlere göre belirtilmiştir.</p>
-      </div>
-      <div data-gnl="24" data-deveb="üstte">
-        <div data-gnl="6 6p" data-ufk="1 6p">
-          <div data-gnl="3" data-ufk="6">
-            <div class="kutu kutu-genel">
-              <i class="fa fa-chrome" aria-hidden="true"></i> Chrome
-            </div>
-          </div>
-          <div data-gnl="3" data-ufk="6">
-            <div class="kutu kutu-genel" data-metin="olumlu">
-              <i class="fa fa-check" aria-hidden="true"></i> Sorunsuz
-            </div>
-          </div>
-        </div>
-        <div data-gnl="6 6p" data-ufk="1 6p">
-          <div data-gnl="3" data-ufk="6">
-          <div class="kutu kutu-genel">
-            <i class="fa fa-firefox" aria-hidden="true"></i> Firefox
-          </div>
-          </div>
-          <div data-gnl="3" data-ufk="6">
-          <div class="kutu kutu-genel" data-metin="olumlu">
-            <i class="fa fa-check" aria-hidden="true"></i> Sorunsuz
-          </div>
-          </div>
-        </div>
-        <div data-gnl="6 6p" data-ufk="1 6p">
-          <div data-gnl="3" data-ufk="6">
-          <div class="kutu kutu-genel">
-            <i class="fa fa-opera" aria-hidden="true"></i> Opera
-          </div>
-          </div>
-          <div data-gnl="3" data-ufk="6">
-          <div class="kutu kutu-genel" data-metin="olumlu">
-            <i class="fa fa-check" aria-hidden="true"></i> Sorunsuz
-          </div>
-          </div>
-        </div>
-        <div data-gnl="6 6p" data-ufk="1 6p">
-          <div data-gnl="3" data-ufk="6">
-          <div class="kutu kutu-genel">
-            <i class="fa fa-safari" aria-hidden="true"></i> Safari
-          </div>
-          </div>
-          <div data-gnl="3" data-ufk="6">
-          <div class="kutu kutu-genel" data-metin="olumlu">
-            <i class="fa fa-check" aria-hidden="true"></i> Sorunsuz
-          </div>
-          </div>
-        </div>
-        <div data-gnl="6 6p" data-ufk="1 6p">
-          <div data-gnl="3" data-ufk="6">
-            <div class="kutu kutu-genel">
-              <i class="fa fa-internet-explorer" aria-hidden="true"></i> IE 10+
-            </div>
-          </div>
-          <div data-gnl="3" data-ufk="6">
-            <div class="kutu kutu-genel metin-belirsiz">
-              <i class="fa fa-times" aria-hidden="true"></i> Belirsiz
-            </div>
-            <div class="kutu kutu-genel" data-metin="olumsuz">
-              <ul class="liste-temiz">
-                <li><i class="fa fa-question-circle-o" aria-hidden="true"></i> CSS özelliklerinde uyumsuzluk</li>
-                <li><i class="fa fa-question-circle-o" aria-hidden="true"></i> IE 10+ ek CSS ile güçlendirildi.</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div data-gnl="6 6p" data-ufk="1 6p">
-          <div data-gnl="3" data-ufk="6">
-            <div class="kutu kutu-genel">
-              <i class="fa fa-edge" aria-hidden="true"></i> Edge
-            </div>
-          </div>
-          <div data-gnl="3" data-ufk="6">
-            <div class="kutu kutu-genel metin-belirsiz">
-              <i class="fa fa-times" aria-hidden="true"></i> Belirsiz
-            </div>
-            <div class="kutu kutu-genel" data-metin="olumsuz">
-              <ul class="liste-temiz">
-                <li><i class="fa fa-question-circle-o" aria-hidden="true"></i> CSS özelliklerinde uyumsuzluk </li>
-                <li><i class="fa fa-question-circle-o" aria-hidden="true"></i> IE 10+ ek CSS ile güçlendirildi.</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-</div>
-
-<div data-deveb="1 1p" w3-include-html="https://data-deveb.github.io/temel/foot.html"></div>
-<script src="https://data-deveb.github.io/assets/js/not-for-deveb-w3.js"></script>
-<script>w3.includeHTML();</script>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+		<title>Deveb - Tarayıcı Desteği</title>
+		<!-- Kök -->
+		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;subset=latin-ext" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&amp;subset=latin-ext" rel="stylesheet">
+		<link rel="stylesheet" href="https://data-deveb.github.io/assets/css/font-awesome.min.css">
+		<link href="https://data-deveb.github.io/assets/css/deveb.css" rel="stylesheet">
+		<link href="https://data-deveb.github.io/assets/css/deveb.ilkel.css" rel="stylesheet">
+		<link href="https://data-deveb.github.io/assets/css/ie/deveb.ilkel.ie.css" rel="stylesheet">
+		<link href="https://data-deveb.github.io/assets/css/deveb.genel.css" rel="stylesheet">
+		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+		<!--[if lt IE 9]>
+		<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+		<![endif]-->
+	</head>
+	<body>
+		<div data-gnl="1 1p" class="header" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
+		<div data-deveb="kaplama ortada" data-gnl="23 24p">
+			<h1>Tarayıcı Desteği</h1>
+			<p>Deveb önyüz iskeletini destekleyen tarayıcılar</p>
+			<div data-gnl="24">
+				<div data-gnl="24">
+					<h2>Masaüstü Desteği</h2>
+					<p>Destekler güncel sürümlere göre belirtilmiştir.</p>
+				</div>
+				<div data-gnl="24" data-deveb="üstte">
+					<div data-gnl="6 6p" data-ufk="1 6p">
+						<div data-gnl="3" data-ufk="6">
+							<div class="kutu kutu-genel">
+								<i class="fa fa-chrome" aria-hidden="true"></i> Chrome
+							</div>
+						</div>
+						<div data-gnl="3" data-ufk="6">
+							<div class="kutu kutu-genel" data-metin="olumlu">
+								<i class="fa fa-check" aria-hidden="true"></i> Sorunsuz
+							</div>
+						</div>
+					</div>
+					<div data-gnl="6 6p" data-ufk="1 6p">
+						<div data-gnl="3" data-ufk="6">
+							<div class="kutu kutu-genel">
+								<i class="fa fa-firefox" aria-hidden="true"></i> Firefox
+							</div>
+						</div>
+						<div data-gnl="3" data-ufk="6">
+							<div class="kutu kutu-genel" data-metin="olumlu">
+								<i class="fa fa-check" aria-hidden="true"></i> Sorunsuz
+							</div>
+						</div>
+					</div>
+					<div data-gnl="6 6p" data-ufk="1 6p">
+						<div data-gnl="3" data-ufk="6">
+							<div class="kutu kutu-genel">
+								<i class="fa fa-opera" aria-hidden="true"></i> Opera
+							</div>
+						</div>
+						<div data-gnl="3" data-ufk="6">
+							<div class="kutu kutu-genel" data-metin="olumlu">
+								<i class="fa fa-check" aria-hidden="true"></i> Sorunsuz
+							</div>
+						</div>
+					</div>
+					<div data-gnl="6 6p" data-ufk="1 6p">
+						<div data-gnl="3" data-ufk="6">
+							<div class="kutu kutu-genel">
+								<i class="fa fa-safari" aria-hidden="true"></i> Safari
+							</div>
+						</div>
+						<div data-gnl="3" data-ufk="6">
+							<div class="kutu kutu-genel" data-metin="olumlu">
+								<i class="fa fa-check" aria-hidden="true"></i> Sorunsuz
+							</div>
+						</div>
+					</div>
+					<div data-gnl="6 6p" data-ufk="1 6p">
+						<div data-gnl="3" data-ufk="6">
+							<div class="kutu kutu-genel">
+								<i class="fa fa-internet-explorer" aria-hidden="true"></i> IE 10+
+							</div>
+						</div>
+						<div data-gnl="3" data-ufk="6">
+							<div class="kutu kutu-genel metin-belirsiz">
+								<i class="fa fa-times" aria-hidden="true"></i> Belirsiz
+							</div>
+							<div class="kutu kutu-genel" data-metin="olumsuz">
+								<ul class="liste-temiz">
+									<li><i class="fa fa-question-circle-o" aria-hidden="true"></i> CSS özelliklerinde uyumsuzluk</li>
+									<li><i class="fa fa-question-circle-o" aria-hidden="true"></i> IE 10+ ek CSS ile güçlendirildi.</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div data-gnl="6 6p" data-ufk="1 6p">
+						<div data-gnl="3" data-ufk="6">
+							<div class="kutu kutu-genel">
+								<i class="fa fa-edge" aria-hidden="true"></i> Edge
+							</div>
+						</div>
+						<div data-gnl="3" data-ufk="6">
+							<div class="kutu kutu-genel metin-belirsiz">
+								<i class="fa fa-times" aria-hidden="true"></i> Belirsiz
+							</div>
+							<div class="kutu kutu-genel" data-metin="olumsuz">
+								<ul class="liste-temiz">
+									<li><i class="fa fa-question-circle-o" aria-hidden="true"></i> CSS özelliklerinde uyumsuzluk </li>
+									<li><i class="fa fa-question-circle-o" aria-hidden="true"></i> IE 10+ ek CSS ile güçlendirildi.</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/foot.html"></div>
+		<script src="https://data-deveb.github.io/assets/js/not-for-deveb-w3.js"></script>
+		<script>w3.includeHTML();</script>
+	</body>
 </html>
