--- a/belgeler/terimler.html
+++ b/belgeler/terimler.html
@@ -68,7 +68,16 @@
 
       <p><span data-metin="dikkat">data-byk="tam-kaplama"</span>: Masaüstü ekranları ve daha büyük ekran genişliklerinde bulunduğu genişliğin tamamını katı bir şekilde kaplar.</p>
 
-      <p><span data-metin="dikkat">data-deveb="kaplama"</span>: Geniş ekranlarda sabit kap örgüsü genişliği tanımlar</p>
+      <p><span data-metin="dikkat">data-deveb="kaplama"</span>: Dizüstü ve daha geniş ekranlarda sabit kap örgüsü genişliği tanımlar</p>
+
+      <p><span data-metin="dikkat">data-gnl="kaplama"</span>: Telefon ekranları ve daha büyük her ekran için tek tek sabit kap örgüsü genişliği tanımlar</p>
+
+      <p><span data-metin="dikkat">data-ufk="kaplama"</span>: Tablet ekranları ve daha büyük her ekran için tek tek sabit kap örgüsü genişliği tanımlar</p>
+
+      <p><span data-metin="dikkat">data-ort="kaplama"</span>: Dizüstü ekranları ve daha büyük her ekran için tek tek sabit kap örgüsü genişliği tanımlar</p>
+
+      <p><span data-metin="dikkat">data-gnl="kaplama"</span>: Masaüstü ekranları ve daha büyük her ekran için sabit kap örgüsü genişliği tanımlar</p>
+
 
   </div>
   <div data-gnl="1 1p" w3-include-html="/temel/foot.html"></div>
