--- a/belgeler/sekme-orgusu.html
+++ b/belgeler/sekme-orgusu.html
@@ -201,7 +201,7 @@
         </div>
       </div>
     </div>
-    <div class="yan-sekmeler tersle" data-gnl="23">
+    <div class="yan-sekmeler" data-deveb="ters-satır" data-gnl="23">
       <input type="radio" name="ys2" id="ys2-1" checked>
       <input type="radio" name="ys2" id="ys2-2">
       <input type="radio" name="ys2" id="ys2-3">
