--- a/belgeler/baglar.html
+++ b/belgeler/baglar.html
@@ -51,31 +51,44 @@
       <button data-bağ="genel byk" type="button" name="button">data-bağ="genel byk"</button>&nbsp;
       <button data-bağ="genel dev" type="button" name="button">data-bağ="genel dev"</button>&nbsp;
     </div>
-
+    <div data-gnl="23">
+      <input data-bağ="basmal hafif mnk" type="checkbox" id="hafif-mnk" value="">
+      <label for="hafif-mnk"></label>
+      <input data-bağ="basmal hafif ufk" type="checkbox" id="hafif-ufk" value="">
+      <label for="hafif-ufk"></label>
+      <input data-bağ="basmal hafif" type="checkbox" id="hafif" value="">
+      <label for="hafif"></label>
+      <input data-bağ="basmal hafif ort" type="checkbox" id="hafif-ort" value="">
+      <label for="hafif-ort"></label>
+      <input data-bağ="basmal hafif byk" type="checkbox" id="hafif-byk" value="">
+      <label for="hafif-byk"></label>
+      <input data-bağ="basmal hafif dev" type="checkbox" id="hafif-dev" value="">
+      <label for="hafif-dev"></label>
+    </div>
     <div data-gnl="23">
       <h2>Basmal Bağlar</h2>
-      <ul class="tg-list">
-        <li class="tg-list-item">
+      <ul>
+        <li>
           <h4>Hafif</h4>
           <input class="tgl tgl-light" id="cb1" type="checkbox"/>
           <label class="tgl-btn" for="cb1"></label>
         </li>
-        <li class="tg-list-item">
+        <li>
           <h4>Yumuşak</h4>
           <input class="tgl tgl-ios" id="cb2" type="checkbox"/>
           <label class="tgl-btn" for="cb2"></label>
         </li>
-        <li class="tg-list-item">
+        <li>
           <h4>Eğri</h4>
           <input class="tgl tgl-skewed" id="cb3" type="checkbox"/>
           <label class="tgl-btn" data-tg-off="KAPALI" data-tg-on="AÇIK" for="cb3"></label>
         </li>
-        <li class="tg-list-item">
+        <li>
           <h4>Yassı</h4>
           <input class="tgl tgl-flat" id="cb4" type="checkbox"/>
           <label class="tgl-btn" for="cb4"></label>
         </li>
-        <li class="tg-list-item">
+        <li>
           <h4>Çevrik</h4>
           <input class="tgl tgl-flip" id="cb5" type="checkbox"/>
           <label class="tgl-btn" data-tg-off="Hayır" data-tg-on="Evet" for="cb5"></label>
