--- a/belgeler/baglar.html
+++ b/belgeler/baglar.html
@@ -51,7 +51,7 @@
       <button data-bağ="genel byk" type="button" name="button">data-bağ="genel byk"</button>&nbsp;
       <button data-bağ="genel dev" type="button" name="button">data-bağ="genel dev"</button>&nbsp;
     </div>
-    <div data-gnl="23">
+    <div data-deveb="göbekte" data-gnl="23">
       <input data-bağ="basmal hafif mnk" type="checkbox" id="hafif-mnk" value="">
       <label for="hafif-mnk"></label>
       <input data-bağ="basmal hafif ufk" type="checkbox" id="hafif-ufk" value="">
