--- a/belgeler/baglar.html
+++ b/belgeler/baglar.html
@@ -52,6 +52,7 @@
       <button data-bağ="genel dev" type="button" name="button">data-bağ="genel dev"</button>&nbsp;
     </div>
     <div data-deveb="göbekte" data-gnl="23">
+      <h2> Hafif Basmal Bağı</h2>
       <input data-bağ="basmal hafif mnk" type="checkbox" id="hafif-mnk" value="">
       <label for="hafif-mnk"></label>
       <input data-bağ="basmal hafif ufk" type="checkbox" id="hafif-ufk" value="">
@@ -64,6 +65,21 @@
       <label for="hafif-byk"></label>
       <input data-bağ="basmal hafif dev" type="checkbox" id="hafif-dev" value="">
       <label for="hafif-dev"></label>
+    </div>
+    <div data-deveb="göbekte" data-gnl="23">
+      <h2> Yumuşak Basmal Bağı</h2>
+      <input data-bağ="basmal yumuşak mnk" type="checkbox" id="yumuşak-mnk" value="">
+      <label for="yumuşak-mnk"></label>
+      <input data-bağ="basmal yumuşak ufk" type="checkbox" id="yumuşak-ufk" value="">
+      <label for="yumuşak-ufk"></label>
+      <input data-bağ="basmal yumuşak" type="checkbox" id="yumuşak" value="">
+      <label for="yumuşak"></label>
+      <input data-bağ="basmal yumuşak ort" type="checkbox" id="yumuşak-ort" value="">
+      <label for="yumuşak-ort"></label>
+      <input data-bağ="basmal yumuşak byk" type="checkbox" id="yumuşak-byk" value="">
+      <label for="yumuşak-byk"></label>
+      <input data-bağ="basmal yumuşak dev" type="checkbox" id="yumuşak-dev" value="">
+      <label for="yumuşak-dev"></label>
     </div>
     <div data-gnl="23">
       <h2>Basmal Bağlar</h2>
