--- a/belgeler/baglar.html
+++ b/belgeler/baglar.html
@@ -53,32 +53,32 @@
     </div>
     <div data-deveb="göbekte" data-gnl="23">
       <h2> Hafif Basmal Bağı</h2>
-      <input data-bağ="basmal hafif mnk" type="checkbox" id="hafif-mnk" value="">
+      <input data-bağ="hafif mnk" type="checkbox" id="hafif-mnk" value="">
       <label for="hafif-mnk"></label>
-      <input data-bağ="basmal hafif ufk" type="checkbox" id="hafif-ufk" value="">
+      <input data-bağ="hafif ufk" type="checkbox" id="hafif-ufk" value="">
       <label for="hafif-ufk"></label>
-      <input data-bağ="basmal hafif" type="checkbox" id="hafif" value="">
+      <input data-bağ="hafif" type="checkbox" id="hafif" value="">
       <label for="hafif"></label>
-      <input data-bağ="basmal hafif ort" type="checkbox" id="hafif-ort" value="">
+      <input data-bağ="hafif ort" type="checkbox" id="hafif-ort" value="">
       <label for="hafif-ort"></label>
-      <input data-bağ="basmal hafif byk" type="checkbox" id="hafif-byk" value="">
+      <input data-bağ="hafif byk" type="checkbox" id="hafif-byk" value="">
       <label for="hafif-byk"></label>
-      <input data-bağ="basmal hafif dev" type="checkbox" id="hafif-dev" value="">
+      <input data-bağ="hafif dev" type="checkbox" id="hafif-dev" value="">
       <label for="hafif-dev"></label>
     </div>
     <div data-deveb="göbekte" data-gnl="23">
       <h2> Yumuşak Basmal Bağı</h2>
-      <input data-bağ="basmal yumuşak mnk" type="checkbox" id="yumuşak-mnk" value="">
+      <input data-bağ="yumuşak mnk" type="checkbox" id="yumuşak-mnk" value="">
       <label for="yumuşak-mnk"></label>
-      <input data-bağ="basmal yumuşak ufk" type="checkbox" id="yumuşak-ufk" value="">
+      <input data-bağ="yumuşak ufk" type="checkbox" id="yumuşak-ufk" value="">
       <label for="yumuşak-ufk"></label>
-      <input data-bağ="basmal yumuşak" type="checkbox" id="yumuşak" value="">
+      <input data-bağ="yumuşak" type="checkbox" id="yumuşak" value="">
       <label for="yumuşak"></label>
-      <input data-bağ="basmal yumuşak ort" type="checkbox" id="yumuşak-ort" value="">
+      <input data-bağ="yumuşak ort" type="checkbox" id="yumuşak-ort" value="">
       <label for="yumuşak-ort"></label>
-      <input data-bağ="basmal yumuşak byk" type="checkbox" id="yumuşak-byk" value="">
+      <input data-bağ="yumuşak byk" type="checkbox" id="yumuşak-byk" value="">
       <label for="yumuşak-byk"></label>
-      <input data-bağ="basmal yumuşak dev" type="checkbox" id="yumuşak-dev" value="">
+      <input data-bağ="yumuşak dev" type="checkbox" id="yumuşak-dev" value="">
       <label for="yumuşak-dev"></label>
     </div>
     <div data-gnl="23">
