--- a/belgeler/baglar.html
+++ b/belgeler/baglar.html
@@ -51,8 +51,10 @@
       <button data-bağ="genel byk" type="button" name="button">data-bağ="genel byk"</button>&nbsp;
       <button data-bağ="genel dev" type="button" name="button">data-bağ="genel dev"</button>&nbsp;
     </div>
+
     <div data-deveb="göbekte" data-gnl="23">
-      <h2> Hafif Basmal Bağı</h2>
+      <h2>Basmal Bağlar</h2>
+      <h3>Hafif</h3>
       <input data-bağ="hafif mnk" type="checkbox" id="hafif-mnk" value="">
       <label for="hafif-mnk"></label>
       <input data-bağ="hafif ufk" type="checkbox" id="hafif-ufk" value="">
@@ -67,7 +69,7 @@
       <label for="hafif-dev"></label>
     </div>
     <div data-deveb="göbekte" data-gnl="23">
-      <h2> Yumuşak Basmal Bağı</h2>
+      <h3> Yumuşak</h3>
       <input data-bağ="yumuşak mnk" type="checkbox" id="yumuşak-mnk" value="">
       <label for="yumuşak-mnk"></label>
       <input data-bağ="yumuşak ufk" type="checkbox" id="yumuşak-ufk" value="">
