--- a/belgeler/baglar.html
+++ b/belgeler/baglar.html
@@ -28,22 +28,22 @@
   <div data-deveb="kaplama ortada" data-gnl="24 24p" data-ort="24 24p">
 
     <div data-gnl="23">
-      <h2>Metin Bağı</h2>
+      <h2>Metin Bağı - Etkin / Engelli</h2>
       <a data-bağ="metin" href="#">BAĞ</a>&nbsp;
       <a data-bağ="metin engelli" href="#">BAĞ engelli</a>
     </div>
     <div data-gnl="23">
-      <h2>Basmalı Metin Bağı</h2>
+      <h2>Basmalı Metin Bağı - Etkin / Engelli</h2>
       <a data-bağ="genel" href="#">BAĞ</a>&nbsp;
       <a data-bağ="genel engelli" href="#">BAĞ engelli</a>
     </div>
     <div data-gnl="23">
-      <h2>Basma Bağ - Tekil</h2>
+      <h2>Basma Bağ - Etkin / Engelli</h2>
       <button data-bağ="genel" type="button" name="button">genel</button>&nbsp;
       <button data-bağ="genel engelli" type="button" name="button">genel engelli</button>
     </div>
     <div data-deveb="göbekte" data-gnl="23">
-      <h2>Boyutlarına Göre Basma Bağları</h2>
+      <h2>Basma Bağ - Boyutlarına göre</h2>
       <button data-bağ="genel mnk" type="button" name="button">data-bağ="genel mnk"</button>&nbsp;
       <button data-bağ="genel ufk" type="button" name="button">data-bağ="genel ufk"</button>&nbsp;
       <button data-bağ="genel" type="button" name="button">data-bağ="genel"</button>&nbsp;
