--- a/belgeler/baglar.html
+++ b/belgeler/baglar.html
@@ -69,7 +69,7 @@
       <label for="hafif-dev"></label>
     </div>
     <div data-deveb="göbekte" data-gnl="23">
-      <h3> Yumuşak</h3>
+      <h3>Yumuşak</h3>
       <input data-bağ="yumuşak mnk" type="checkbox" id="yumuşak-mnk" value="">
       <label for="yumuşak-mnk"></label>
       <input data-bağ="yumuşak ufk" type="checkbox" id="yumuşak-ufk" value="">
@@ -83,6 +83,52 @@
       <input data-bağ="yumuşak dev" type="checkbox" id="yumuşak-dev" value="">
       <label for="yumuşak-dev"></label>
     </div>
+    <div data-deveb="göbekte" data-gnl="23">
+      <h3>Yassı</h3>
+      <input data-bağ="yassı mnk" type="checkbox" id="yassı-mnk" value="">
+      <label for="yassı-mnk"></label>
+      <input data-bağ="yassı ufk" type="checkbox" id="yassı-ufk" value="">
+      <label for="yassı-ufk"></label>
+      <input data-bağ="yassı" type="checkbox" id="yassı" value="">
+      <label for="yassı"></label>
+      <input data-bağ="yassı ort" type="checkbox" id="yassı-ort" value="">
+      <label for="yassı-ort"></label>
+      <input data-bağ="yassı byk" type="checkbox" id="yassı-byk" value="">
+      <label for="yassı-byk"></label>
+      <input data-bağ="yassı dev" type="checkbox" id="yassı-dev" value="">
+      <label for="yassı-dev"></label>
+    </div>
+    <div data-deveb="göbekte" data-gnl="23">
+      <h3>Eğik</h3>
+      <input data-bağ="eğik mnk" type="checkbox" id="eğik-mnk" value="">
+      <label for="eğik-mnk" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
+      <input data-bağ="eğik ufk" type="checkbox" id="eğik-ufk" value="">
+      <label for="eğik-ufk" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
+      <input data-bağ="eğik" type="checkbox" id="eğik" value="">
+      <label for="eğik" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
+      <input data-bağ="eğik ort" type="checkbox" id="eğik-ort" value="">
+      <label for="eğik-ort" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
+      <input data-bağ="eğik byk" type="checkbox" id="eğik-byk" value="">
+      <label for="eğik-byk" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
+      <input data-bağ="eğik dev" type="checkbox" id="eğik-dev" value="">
+      <label for="eğik-dev" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
+    </div>
+    <div data-deveb="göbekte" data-gnl="23">
+      <h3>Çevrik</h3>
+      <input data-bağ="çevrik mnk" type="checkbox" id="çevrik-mnk" value="">
+      <label for="çevrik-mnk" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
+      <input data-bağ="çevrik ufk" type="checkbox" id="çevrik-ufk" value="">
+      <label for="çevrik-ufk" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
+      <input data-bağ="çevrik" type="checkbox" id="çevrik" value="">
+      <label for="çevrik" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
+      <input data-bağ="çevrik ort" type="checkbox" id="çevrik-ort" value="">
+      <label for="çevrik-ort" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
+      <input data-bağ="çevrik byk" type="checkbox" id="çevrik-byk" value="">
+      <label for="çevrik-byk" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
+      <input data-bağ="çevrik dev" type="checkbox" id="çevrik-dev" value="">
+      <label for="çevrik-dev" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
+    </div>
+
     <div data-gnl="23">
       <h2>Basmal Bağlar</h2>
       <ul>
@@ -97,7 +143,7 @@
           <label class="tgl-btn" for="cb2"></label>
         </li>
         <li>
-          <h4>Eğri</h4>
+          <h4>Eğik</h4>
           <input class="tgl tgl-skewed" id="cb3" type="checkbox"/>
           <label class="tgl-btn" data-tg-off="KAPALI" data-tg-on="AÇIK" for="cb3"></label>
         </li>
