--- a/belgeler/baglar.html
+++ b/belgeler/baglar.html
@@ -128,6 +128,38 @@
       <input data-bağ="çevrik dev" type="checkbox" id="çevrik-dev" value="">
       <label for="çevrik-dev" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
     </div>
+    <div data-deveb="göbekte" data-gnl="23">
+      <h3>Çevrik</h3>
+      <input data-bağ="çevrik mnk" type="checkbox" id="çevrik-mnk" value="">
+      <label for="çevrik-mnk" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
+      <input data-bağ="çevrik ufk" type="checkbox" id="çevrik-ufk" value="">
+      <label for="çevrik-ufk" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
+      <input data-bağ="çevrik" type="checkbox" id="çevrik" value="">
+      <label for="çevrik" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
+      <input data-bağ="çevrik ort" type="checkbox" id="çevrik-ort" value="">
+      <label for="çevrik-ort" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
+      <input data-bağ="çevrik byk" type="checkbox" id="çevrik-byk" value="">
+      <label for="çevrik-byk" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
+      <input data-bağ="çevrik dev" type="checkbox" id="çevrik-dev" value="">
+      <label for="çevrik-dev" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
+    </div>
+    <div data-deveb="göbekte" data-gnl="23">
+      <h3>Simge</h3>
+      <input data-bağ="simge mnk" type="checkbox" id="simge-mnk" value="">
+      <label for="simge-mnk"><i class="fa fa-address-book-o" aria-hidden="true"></i></label>
+      <input data-bağ="simge ufk" type="checkbox" id="simge-ufk" value="">
+      <label for="simge-ufk"><i class="fa fa-address-book-o" aria-hidden="true"></i></label>
+      <input data-bağ="simge" type="checkbox" id="simge" value="">
+      <label for="simge"><i class="fa fa-address-book-o" aria-hidden="true"></i></label>
+      <input data-bağ="simge ort" type="checkbox" id="simge-ort" value="">
+      <label for="simge-ort"><i class="fa fa-address-book-o" aria-hidden="true"></i></label>
+      <input data-bağ="simge byk" type="checkbox" id="simge-byk" value="">
+      <label for="simge-byk"><i class="fa fa-address-book-o" aria-hidden="true"></i></label>
+      <input data-bağ="simge dev" type="checkbox" id="simge-dev" value="">
+      <label for="simge-dev"><i class="fa fa-address-book-o" aria-hidden="true"></i></label>
+      <input data-bağ="simge çapraz dev" type="checkbox" id="simge-çapraz" value="">
+      <label for="simge-çapraz"><i class="fa fa-address-book-o" aria-hidden="true"></i><i class="fa fa-plus" aria-hidden="true"></i></label>
+    </div>
   </div>
   <div data-gnl="1 1p" w3-include-html="/temel/foot.html"></div>
   <script src="https://www.w3schools.com/lib/w3.js"></script>
