--- a/belgeler/baglar.html
+++ b/belgeler/baglar.html
@@ -142,8 +142,20 @@
       <label for="simge-byk"><i class="fa fa-address-book-o" aria-hidden="true"></i></label>
       <input data-bağ="simge dev" type="checkbox" id="simge-dev" value="">
       <label for="simge-dev"><i class="fa fa-address-book-o" aria-hidden="true"></i></label>
-      <input data-bağ="simge çapraz dev" type="checkbox" id="simge-çapraz" value="">
-      <label for="simge-çapraz"><i class="fa fa-address-book-o" aria-hidden="true"></i><i class="fa fa-plus" aria-hidden="true"></i></label>
+    </div>
+    <div data-deveb="göbekte" data-gnl="23">
+      <input data-bağ="simge çapraz mnk" type="checkbox" id="simge-mnk1" value="">
+      <label for="simge-mnk1"><i class="fa fa-address-book-o" aria-hidden="true"></i></i><i class="fa fa-plus" aria-hidden="true"></i></label>
+      <input data-bağ="simge çapraz ufk" type="checkbox" id="simge-ufk1" value="">
+      <label for="simge-ufk1"><i class="fa fa-address-book-o" aria-hidden="true"></i></i><i class="fa fa-plus" aria-hidden="true"></i></label>
+      <input data-bağ="simge çapraz" type="checkbox" id="simge1" value="">
+      <label for="simge1"><i class="fa fa-address-book-o" aria-hidden="true"></i></i><i class="fa fa-plus" aria-hidden="true"></i></label>
+      <input data-bağ="simge çapraz ort" type="checkbox" id="simge-ort1" value="">
+      <label for="simge-ort1"><i class="fa fa-address-book-o" aria-hidden="true"></i></i><i class="fa fa-plus" aria-hidden="true"></i></label>
+      <input data-bağ="simge çapraz byk" type="checkbox" id="simge-byk1" value="">
+      <label for="simge-byk1"><i class="fa fa-address-book-o" aria-hidden="true"></i></i><i class="fa fa-plus" aria-hidden="true"></i></label>
+      <input data-bağ="simge çapraz dev" type="checkbox" id="simge-dev1" value="">
+      <label for="simge-dev1"><i class="fa fa-address-book-o" aria-hidden="true"></i></i><i class="fa fa-plus" aria-hidden="true"></i></label>
     </div>
   </div>
   <div data-gnl="1 1p" w3-include-html="/temel/foot.html"></div>
