--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -74,7 +74,7 @@
 
     <h2>Kap Örgüsü Tablosu</h2>
 
-    <div data-gnl="1 1p" style="overflow:auto;">
+    <div data-gnl="1 1p" style="overflow:auto; height:50vh;">
     <style type="text/css">
     .tg  {border-collapse:collapse;border-spacing:0;border-color:#ccc;}
     .tg td{font-family:Arial, sans-serif;font-size:14px;padding:5px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:#ccc;color:#333;background-color:#fff;}
@@ -88,7 +88,6 @@
     .tg .tg-kjho{background-color:#ffffc7;vertical-align:top}
     .tg .tg-i81m{background-color:#ffffff;text-align:center;vertical-align:top}
     .tg .tg-2nhx{background-color:#9b9b9b;text-align:center;vertical-align:top}
-    .tg .tg-yw4l{vertical-align:top}
     </style>
     <table class="tg">
       <tr>
@@ -160,56 +159,51 @@
         <td class="tg-2nhx" rowspan="3">tanımsız</td>
       </tr>
       <tr>
-        <td class="tg-kjho">"tam-kaplama"</td>
-        <td class="tg-baqh">genişlik:100%<br></td>
+        <td class="tg-kjho">"tam-kaplama"<br>genişlik:100%</td>
+        <td class="tg-baqh">var</td>
         <td class="tg-2nhx">tanımsız</td>
-        <td class="tg-baqh">genişlik:100%</td>
-        <td class="tg-baqh">genişlik:100%</td>
-        <td class="tg-baqh">genişlik:100%</td>
-        <td class="tg-baqh">genişlik:100%</td>
-        <td class="tg-baqh">genişlik:100%</td>
+        <td class="tg-baqh">var</td>
+        <td class="tg-baqh">var</td>
+        <td class="tg-baqh">var</td>
+        <td class="tg-baqh">var</td>
+        <td class="tg-baqh">var</td>
       </tr>
       <tr>
-        <td class="tg-kjho">Parçalı Genişlikler</td>
+        <td class="tg-kjho">Parçalı Genişlikler<br>"1~24 1p~24p"<br>4.16%~100%</td>
         <td class="tg-2nhx">tanımsız</td>
-        <td class="tg-baqh" colspan="4">"1~24 1p~24p"<br>1~24/1~24 = 4.16%~100%</td>
-        <td class="tg-baqh" colspan="2">"1~24 1p~24p"<br>1~24/1~24 = 4.16%~100%</td>
-        <td class="tg-baqh" colspan="2">"1~24 1p~24p"<br>1~24/1~24 = 4.16%~100%</td>
-        <td class="tg-baqh">"1~24 1p~24p"<br>1~24/1~24 = 4.16%~100%</td>
+        <td class="tg-baqh" colspan="4">var<br></td>
+        <td class="tg-baqh" colspan="2">var</td>
+        <td class="tg-baqh" colspan="2">var</td>
+        <td class="tg-baqh">var</td>
       </tr>
       <tr>
-        <td class="tg-kjho"><br></td>
-        <td class="tg-yw4l"></td>
-        <td class="tg-yw4l"><br></td>
-        <td class="tg-yw4l"></td>
-        <td class="tg-yw4l"></td>
-        <td class="tg-yw4l"></td>
-        <td class="tg-yw4l"></td>
-        <td class="tg-yw4l"></td>
-        <td class="tg-yw4l"></td>
-        <td class="tg-yw4l"></td>
-        <td class="tg-yw4l"></td>
-        <td class="tg-yw4l"></td>
-        <td class="tg-yw4l"></td>
-        <td class="tg-yw4l"></td>
-        <td class="tg-yw4l"></td>
+        <td class="tg-kjho">Oranlı Genişlikler<br>"1o~24o"<br>4.16%~100%</td>
+        <td class="tg-2nhx">tanımsız<br></td>
+        <td class="tg-baqh" colspan="4">var<br></td>
+        <td class="tg-2nhx">tanımsız</td>
+        <td class="tg-baqh" colspan="2">var</td>
+        <td class="tg-2nhx">tanımsız</td>
+        <td class="tg-baqh" colspan="2">var</td>
+        <td class="tg-2nhx">tanımsız</td>
+        <td class="tg-baqh">var</td>
+        <td class="tg-2nhx">tanımsız</td>
       </tr>
       <tr>
-        <td class="tg-kjho"></td>
-        <td class="tg-yw4l"></td>
-        <td class="tg-yw4l"><br></td>
-        <td class="tg-yw4l"></td>
-        <td class="tg-yw4l"></td>
-        <td class="tg-yw4l"></td>
-        <td class="tg-yw4l"></td>
-        <td class="tg-yw4l"></td>
-        <td class="tg-yw4l"></td>
-        <td class="tg-yw4l"></td>
-        <td class="tg-yw4l"></td>
-        <td class="tg-yw4l"></td>
-        <td class="tg-yw4l"></td>
-        <td class="tg-yw4l"></td>
-        <td class="tg-yw4l"></td>
+        <td class="tg-kjho">Konumlama<br>"solda", "ortada", "sağda", "üstte", "göbekte", "altta", "merkezde", "çizgide", "solda-ol", "ortada-ol", "sağda-ol", "üstte-ol", "göbekte-ol", "altta-ol", "merkezde-ol", "çizgide-ol", "ters-satır", "ters-sütun", "ters-dizi", "kayma", "taşma"<br></td>
+        <td class="tg-baqh">var</td>
+        <td class="tg-2nhx">tanımsız</td>
+        <td class="tg-baqh">var</td>
+        <td class="tg-2nhx">tanımsız</td>
+        <td class="tg-baqh">var</td>
+        <td class="tg-2nhx">tanımsız</td>
+        <td class="tg-2nhx">tanımsız</td>
+        <td class="tg-baqh">var</td>
+        <td class="tg-2nhx">tanımsız</td>
+        <td class="tg-2nhx">tanımsız</td>
+        <td class="tg-baqh">var</td>
+        <td class="tg-2nhx">tanımsız</td>
+        <td class="tg-baqh">var</td>
+        <td class="tg-2nhx">tanımsız</td>
       </tr>
     </table>
     </div>
