--- a/index.html
+++ b/index.html
@@ -37,13 +37,18 @@
             <a data-bağ="genel" href="/belgeler/kap-orgusu.html">BAŞLA</a>&nbsp;
             <a data-bağ="genel" href="https://www.facebook.com/groups/1818283228485179/">KATIL</a>
           </p>
+          <p style="font-size:16pt; text-align:center; color:#ccc;">
+            <i class="fa fa-html5" aria-hidden="true"></i>
+            <i class="fa fa-css3" aria-hidden="true"></i>
+          </p>
         </div>
       </div>
       <div class="merkez direk" data-gnl="8" data-ort="4">
         <div data-gnl="6">
           <div data-gnl="8" style="padding-left:2%">
 
-            <div class="beri-alt-1" data-gnl="8" style="background-color:#ccc; height:200px;"></div>
+            <div class="beri-alt-1" data-deveb="göbekte yay" data-gnl="8" style="font-size:500%;background-color:#ccc; height:200px;">
+            </div>
             <div class="ap-deveb beri-alt-1" data-gnl="8" style="height:60px;"></div>
             <div class="ap-deveb beri-alt-1" data-gnl="1 5p" style="height:80px;"></div>
 
@@ -60,6 +65,8 @@
         </div>
       </div>
   </div>
+  <div data-gnl="1 1p">{% include example_header.html %}</div>
+
   <div data-gnl="1 1p" w3-include-html="/temel/foot.html"></div>
   <script src="https://www.w3schools.com/lib/w3.js"></script>
   <script>w3.includeHTML();</script>
