--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
       </div>
   </div>
-  <div data-gnl="1 1p">{% include example_header.html %}</div>
+  <div data-gnl="1 1p">{% include foot.html %}</div>
 
   <div data-gnl="1 1p" w3-include-html="/temel/foot.html"></div>
   <script src="https://www.w3schools.com/lib/w3.js"></script>
