--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ layout: default
           </p>
           <p style="font-size:16pt; text-align:center; color:#ccc;">
             <i class="fa fa-html5" aria-hidden="true"></i>
+            <i class="fa fa-html5" aria-hidden="true"></i>
             <i class="fa fa-css3" aria-hidden="true"></i>
           </p>
         </div>
